estructura amu2 ligth

--- a/src/app/messages/pages/messages-create-page/messages-create-page.component.html
+++ b/src/app/messages/pages/messages-create-page/messages-create-page.component.html
@@ -1,1 +1,7 @@
-<p>messages-create-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1> Crear Audio </h1>
+        </div>
+    </div>
+</div>
