--- a/src/app/messages/pages/messages-page/messages-page.component.html
+++ b/src/app/messages/pages/messages-page/messages-page.component.html
@@ -1,1 +1,7 @@
-<p>messages-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1> Audios</h1>
+        </div>
+    </div>
+</div>
