--- a/src/app/messages/pages/messages-see-page/messages-see-page.component.html
+++ b/src/app/messages/pages/messages-see-page/messages-see-page.component.html
@@ -1,1 +1,7 @@
-<p>messages-see-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1> Ver Audio  {{idAudio}}</h1>
+        </div>
+    </div>
+</div>
