--- a/src/app/stations/pages/stations-create-page/stations-create-page.component.html
+++ b/src/app/stations/pages/stations-create-page/stations-create-page.component.html
@@ -1,1 +1,7 @@
-<p>stations-create-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1>Crear Estacion </h1>
+        </div>
+    </div>
+</div>
