--- a/src/app/dashboard/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard/pages/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,7 @@
-<p>dashboard-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1> Dashboard </h1>
+        </div>
+    </div>
+</div>
