--- a/src/app/messages/pages/messages-edit-page/messages-edit-page.component.html
+++ b/src/app/messages/pages/messages-edit-page/messages-edit-page.component.html
@@ -1,1 +1,7 @@
-<p>messages-edit-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1> Editar Audio  {{idAudio}}</h1>
+        </div>
+    </div>
+</div>
