--- a/src/app/stations/pages/stations-edit-page/stations-edit-page.component.html
+++ b/src/app/stations/pages/stations-edit-page/stations-edit-page.component.html
@@ -1,1 +1,7 @@
-<p>stations-edit-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1>Editar Estacion {{idStation}} </h1>
+        </div>
+    </div>
+</div>
