--- a/src/app/stations/pages/stations-see-page/stations-see-page.component.html
+++ b/src/app/stations/pages/stations-see-page/stations-see-page.component.html
@@ -1,1 +1,7 @@
-<p>stations-see-page works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+          <h1>Ver Estacion  {{idStation}}</h1>
+        </div>
+    </div>
+</div>
