--- a/src/app/stations/pages/stations-page/stations-page.component.html
+++ b/src/app/stations/pages/stations-page/stations-page.component.html
@@ -2,6 +2,8 @@
     <div class="col-12">
         <div class="card">
           <h1> Estaciones </h1>
+
+          <stations-table></stations-table>
         </div>
     </div>
 </div>
