se empieza los formularios

--- a/src/app/stations/pages/stations-create-page/stations-create-page.component.html
+++ b/src/app/stations/pages/stations-create-page/stations-create-page.component.html
@@ -2,6 +2,9 @@
     <div class="col-12">
         <div class="card">
           <h1>Crear Estacion </h1>
+
+          <form-station></form-station>
+
         </div>
     </div>
 </div>
