--- a/src/app/stations/pages/stations-edit-page/stations-edit-page.component.html
+++ b/src/app/stations/pages/stations-edit-page/stations-edit-page.component.html
@@ -2,6 +2,8 @@
     <div class="col-12">
         <div class="card">
           <h1>Editar Estacion {{idStation}} </h1>
+
+          <form-station [formStation]="formStation"></form-station>
         </div>
     </div>
 </div>
