--- a/src/app/messages/pages/messages-edit-page/messages-edit-page.component.html
+++ b/src/app/messages/pages/messages-edit-page/messages-edit-page.component.html
@@ -2,6 +2,8 @@
     <div class="col-12">
         <div class="card">
           <h1> Editar Audio  {{idAudio}}</h1>
+
+          <form-messages [formMessages]="formMessage" ></form-messages>
         </div>
     </div>
 </div>
