--- a/src/app/stations/pages/stations-create-page/stations-create-page.component.html
+++ b/src/app/stations/pages/stations-create-page/stations-create-page.component.html
@@ -3,7 +3,7 @@
         <div class="card">
           <h1>Crear Estacion </h1>
 
-          <form-station></form-station>
+          <form-station method="create"></form-station>
 
         </div>
     </div>
