--- a/src/app/messages/pages/messages-create-page/messages-create-page.component.html
+++ b/src/app/messages/pages/messages-create-page/messages-create-page.component.html
@@ -2,6 +2,8 @@
     <div class="col-12">
         <div class="card">
           <h1> Crear Audio </h1>
+
+          <form-messages method="create"></form-messages>
         </div>
     </div>
 </div>
